2. Correctly position corner indicator.
3. Use mouse over colours for corner indicator.
4. Add option to control window titlebar appearance - default to
   gradient.
5. Fix for diagonal striped progressbars whose height!=20 (such as in
   konqueror's statusbar)
6. Dont draw line between window titlebar and contents when not rounded.
7. Option to tint the default button colour.
8. Fix for very slim progressbars.

0.55.3
------
 1. Fix issues with flat/raised style and titlebars.
 2. Fix black square (where maximise icon would be) flashing when a
    window is maximised.
 3. More rounded titlebars when fully rounded.
 4. Fix 'font colour' default button indicator.
 5. 'Fix' for plasma and NVIDIA cards (on my system at least). Buttons,
    scrollbars, etc., in plasma's dialogs have redraw errors on NVIDIA
    (but not on my works integrated intel chip). So, by default gradients
    on plasma widgets (of the Qt variety) are drawn directly, and not cached
    to pixmaps. To revert to the previous method, edit
     $XDG_CONFIG_HOME/qtcurvestylerc (e.g. ~/.config/qtcurvestylerc)

    ...and add

     plasmaHack=false
 6. Dont do mouse over for dockwidget title area.
 7. Fix some slight tab drawing errors.
 8. Reduced CPU usage of animated progressbars.
 9. Correct reading in of contrast setting from Trolltech.conf
10. Read KDE3's contrast setting if not running under KDE4.
11. Fix arrows on gwenview's scrollbar buttons sometime being white.

0.55.2
------
 1. Fix look of disabled entry fields.
 2. Add ability to import qtc_*.themerc settings into config dialog.
 3. Try to prevent skiny toolbar buttons (such as konqueror's 'Up' button)
 4. Sync with KDE4.0.
 5. Improve styled KMultiTabBarTabs
 6. Use alpha for blending frame borders. (Fixes problem with dolphin's
    column view)
 7. Supply a KWin decoration.
 8. Smaller MDI window titlebars - emphasises difference with KWin.
 9. Fix text of buttons in KListView
10. Better menu button indicator code for RTL.