@@ -400,24 +400,6 @@
        <string>Menus &amp;&amp; Toolbars</string>
       </attribute>
       <layout class="QGridLayout" >
-       <property name="leftMargin" >
-        <number>11</number>
-       </property>
-       <property name="topMargin" >
-        <number>11</number>
-       </property>
-       <property name="rightMargin" >
-        <number>11</number>
-       </property>
-       <property name="bottomMargin" >
-        <number>11</number>
-       </property>
-       <property name="horizontalSpacing" >
-        <number>6</number>
-       </property>
-       <property name="verticalSpacing" >
-        <number>6</number>
-       </property>
        <item row="0" column="0" >
         <widget class="QLabel" name="textLabel1_4" >
          <property name="text" >
@@ -581,6 +563,13 @@
             </property>
            </widget>
           </item>
+          <item row="8" column="0" >
+           <widget class="QCheckBox" name="menuStripe" >
+            <property name="text" >
+             <string>Menu stripe</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
@@ -663,8 +652,8 @@
          </property>
          <property name="sizeHint" >
           <size>
-           <width>20</width>
-           <height>8</height>
+           <width>83</width>
+           <height>20</height>
           </size>
          </property>
         </spacer>
@@ -889,6 +878,7 @@
   <tabstop>borderMenuitems</tabstop>
   <tabstop>lighterPopupMenuBgnd</tabstop>
   <tabstop>thinnerMenuItems</tabstop>
+  <tabstop>menuStripe</tabstop>
   <tabstop>toolbarAppearance</tabstop>
   <tabstop>toolbarSeparators</tabstop>
   <tabstop>gtkComboMenus</tabstop>
